add to relation course, professor, vote tables